# Computer-Components-AR-Android-App

./: README.md  import-summary.txt  settings.gradle
app/: build.gradle
app/src/debug/res/values/: google_maps_api.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: CourseraVS.vs  CouseraFS.fs  EDIT_CourseraVS.vs  EDIT_CouseraFS.fs  IntermediateFrag.fsh  IntermediateVert.vsh  NiceFrag.fsh  NiceVert.vsh  SimpleBackgroundFrag.fsh  SimpleFrag.fsh  SimpleTexFrag.fsh  SimpleTexVert.vsh  SimpleVert.vsh  carro_alegorico.mtl  chip_centro_certo.mtl
app/src/main/cpp/: CMakeLists.txt  Config.cpp  Config.h  PathFinder.cpp  PathFinder.h  Percurso.cpp  Percurso.h  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VideoRenderer.cpp  VideoRenderer.hpp  main_simple.cpp  main_simple.h
app/src/main/cpp/cppLib/: __bit_reference  __bsd_locale_fallbacks.h  __debug  __functional_base  __hash_table  __locale  __mutex_base  __nullptr  __split_buffer  __sso_allocator  __std_stream  __string  __threading_support  __tree  __tuple  algorithm  any  array  atomic  bitset  cctype  cerrno  cfenv  cfloat  chrono  cinttypes  climits  clocale  cmath  codecvt  complex  complex.h  condition_variable  csetjmp  cstddef  cstdio  cstdlib  ctime  ctype.h  cwchar  (+66 more)
app/src/main/cpp/cppLib/experimental/: __config  __memory  algorithm  any  chrono  coroutine  deque  dynarray  filesystem  forward_list  functional  list  map  memory_resource  numeric  optional  regex  set  string  string_view  unordered_map  unordered_set  utility  vector
app/src/main/res/layout/: activity_main.xml  activity_maps.xml  opencv_layout.xml  toolbar.xml
app/src/main/res/values/: colors.xml  (+3 more)
gradle/wrapper/: gradle-wrapper.properties
(+35 files in other folders)
